--- a/client/components/SectionTitle/index.module.css
+++ b/client/components/SectionTitle/index.module.css
@@ -1,6 +1,8 @@
 .title {
   font-size: 24px;
   font-weight: 600;
+  color: var(--color-title-text);
+  padding: 24px 0;
 }
 
 .left {
@@ -14,5 +16,13 @@
 @media (min-width: 768px) {
   .title {
     font-size: 35px;
+    padding: 32px 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .title {
+    font-size: 35px;
+    padding: 40px 0;
   }
 }
