--- a/client/assets/styles/global.css
+++ b/client/assets/styles/global.css
@@ -22,8 +22,12 @@ body {
 :root {
   --color-title-text: #4b4b4b;
 
+  --button-tertiary-bg: #515151;
+  --button-tertiary-text: #ffffff;
+  --button-tertiary-bg-active: #ffffff;
+  --button-tertiary-text-active: #515151;
+
   --color-bg-main: #025595;
-  --color-bg-light: #ffffff;
   --color-text-main: #12181d;
   --color-text-secondary: #4b4b4b;
   --color-accent: #1BB3G8;
